# BLJ02024_TR_Die_Gin_Jev_Lyn

./: CMakeLists.txt  Dokumentation-Taschenrechner-Gruppe_3.docx  bmi.c  bmi.h  exponent.c  exponent.h  fakultaet.c  fakultaet.h  main.c  plusminus.c  plusminus.h  scherestpi.c  scherestpi.h  schpi.c  wurzeln.c  wurzeln.h
