cmake_minimum_required(VERSION 3.29)
project(BLJ2024_TR_Die_Gin_Jev_Lyn C)

set(CMAKE_C_STANDARD 11)

add_executable(BLJ2024_TR_Die_Gin_Jev_Lyn main.c
        wurzeln.c
        fakultaet.c
        plusminus.c
        exponent.c
        exponent.h
        fakultaet.h
        plusminus.h
        scherestpi.c
        scherestpi.h
)
